<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <com.example.ricco.utils.TopBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:leftText="@string/action_back"
        app:title="@string/text_title"
        app:rightText="@string/action_edit"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal">

    <com.example.ricco.utils.CircleImageVIew
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="QGBB"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <com.example.ricco.utils.InfoItem
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/button"
        android:background="@mipmap/ic_launcher"/>


</LinearLayout>