<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.ricco.others.TopBar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rightText="@string/action_edit"
        app:leftText="@string/action_back"
        app:title="个人信息"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="#c8edfe">

                <com.example.ricco.others.CircleImageVIew
                    android:id="@+id/user_pic"
                    android:layout_height="70dp"
                    android:layout_width="70dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="20dp"
                    android:layout_below="@+id/user_pic"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

            <com.example.ricco.others.InfoItem
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.example.ricco.others.InfoItem
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.example.ricco.others.InfoItem
                android:id="@+id/birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.example.ricco.others.InfoItem
                android:id="@+id/place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.example.ricco.others.InfoItem
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.example.ricco.others.InfoItem
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/exit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:text="@string/action_log_out"
                android:textColor="#ffffff"
                android:background="@drawable/rect_gray_blue"/>

            </LinearLayout>

        </LinearLayout>
            </ScrollView>

</LinearLayout>