<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.ricco.utils.TopBar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rightText="完成"
        app:leftText="@string/action_back"
        app:title="我的资料"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal">

                <com.example.ricco.utils.CircleImageVIew
                    android:id="@+id/user_pic"
                    android:layout_height="60dp"
                    android:layout_width="60dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/head"/>

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/app_name"
                    android:layout_below="@+id/user_pic"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <com.example.ricco.utils.InfoItem
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.ricco.utils.InfoItem
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.ricco.utils.InfoItem
                android:id="@+id/birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.ricco.utils.InfoItem
                android:id="@+id/place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.ricco.utils.InfoItem
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.ricco.utils.InfoItem
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/problem"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/text_password_problem"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center_vertical"
                android:drawableRight="@drawable/edit"
                android:paddingRight="10dp"/>

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/prompt_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center_vertical"
                android:drawableRight="@drawable/edit"
                android:paddingRight="10dp"/>

        </LinearLayout>
            </ScrollView>

</LinearLayout>